# polars-api

./: .gitignore  404.html  CONTRIBUTING.md  Dockerfile  Makefile  README.md  TODO.md  index.html  justfile  mkdocs.yml  objects.inv  prek.toml  pyproject.toml  sitemap.xml  test.py
.devcontainer/: devcontainer.json
.github/workflows/: main.yml
benchmarks/: bench.py  results.json  results.md
benchmarks/version_compare/: .gitignore  README.md  bench_runner.py  compare.py
docs/: documentation.md  index.md  modules.md
documentation/: index.html
examples/: example.py  test.py
modules/: index.html
polars_api/: __init__.py  api.py  utils.py
search/: search_index.json
tests/: test_api.py  test_foo.py
